--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "activerules-read-files-promise": "^1.0.3",
+    "bluebird": "^3.5.0",
     "lodash.merge": "^4.6.0",
     "sinon": "^3.2.1"
   }
